Update script.js to support es6 module

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script async defer src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
   </head>
   <body>
     <header>
       <nav>
         <h1><a href="">Note</a></h1>
-        <button id="create-note-button" onclick="createNote()">+ Adicionar nota</button>
+        <button id="create-note-button">+ Adicionar nota</button>
       </nav>
     </header>
     <main>
